...
            "state": "translated",
            "value": "직접 담기"
          }
        }
      }
    },
    "Add recipe": {
      "localizations": {
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "레시피 추가"
          }
...
            "state": "translated",
            "value": "검색어 지우기"
          }
        }
      }
    },
    "Close": {
      "localizations": {
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "닫기"
          }
...
            "state": "translated",
            "value": "먹었나요, 버렸나요?"
          }
        }
      }
    },
    "Delete": {
      "localizations": {
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "삭제"
          }
...
            "state": "translated",
            "value": "재료 삭제"
          }
        }
      }
    },
    "Delete recipe": {
      "localizations": {
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "레시피 삭제"
          }
...
            "state": "translated",
            "value": "기록"
          }
        }
      }
    },
    "Home": {
      "localizations": {
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "홈"
          }
...
            "state": "translated",
            "value": "자주 버림"
          }
        }
      }
    },
    "My recipes": {
      "localizations": {
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "내 레시피"
          }
...
            "state": "translated",
            "value": "개인정보 관련 안내"
          }
        }
      }
    },
    "Profile": {
      "localizations": {
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "프로필"
          }
...
            "state": "translated",
            "value": "설정 %2$lld단계 중 %1$lld단계"
          }
        }
      }
    },
    "Share": {
      "localizations": {
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "공유"
          }
...
            "state": "translated",
            "value": "시작"
          }
        }
      }
    },
    "Start cooking": {
      "localizations": {
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "요리 시작"
          }
...
            "state": "translated",
            "value": "가장 임박한 재료부터,\n오늘의 레시피"
          }
        }
      }
    },
    "Today's tickets": {
      "localizations": {
        "ko": {
          "stringUnit": {
            "state": "translated",
            "value": "오늘의 티켓"
          }
...
